# tree-sitter-wasm-rust-example

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  grammar.js  package-lock.json  package.json
src/browser/: index.html  main.js
src/native/: Cargo.toml
src/native/src/: main.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
